# bleep

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml
bleep/: __init__.py  backend.py  bleep.pyi  characteristic.py  device.py  requester.py  service.py  util.py
bleep/data/: chars.json  descriptors.json  services.json
bleep/gatt/: characteristic.py  service.py
examples/: list.py  test_gattlib.py  tree.py
src/: lib.rs
