[package]
name = "bleep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bleep"
crate-type = ["cdylib"]

[dependencies]
btleplug = "0.11.1"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19.0", features = ["tokio-runtime"] }
xpc-connection = "0.2.3"
