[package]
name = "bleep"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bleep"
crate-type = ["cdylib"]

[dependencies]
btleplug = "0.11.1"
log = "0.4.20"
pyo3 = { version = "0.19.0", features = [
    "extension-module",
    "abi3",
    "abi3-py37",
] }
pyo3-asyncio = { version = "0.19.0", features = ["tokio-runtime"] }
pyo3-log = "0.8.3"
tokio = "1.32.0"
tokio-stream = "0.1.14"

